--- a/HaierOven/OvenTypeAlert.xib
+++ b/HaierOven/OvenTypeAlert.xib
@@ -18,14 +18,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="gGd-wB-mqb" customClass="LeftMenuAlert">
+        <view contentMode="scaleToFill" id="wX0-kE-Q3r" customClass="OvenTypeAlert">
             <rect key="frame" x="0.0" y="0.0" width="300" height="168"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8dr-jz-cYN">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Mp-Ae-0kf">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="40"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登陆奖励" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejR-Tk-Scd">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用烤箱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvD-1R-WN6">
                             <rect key="frame" x="20" y="8" width="267" height="24"/>
                             <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,67 +36,67 @@
                     </subviews>
                     <color key="backgroundColor" red="1" green="0.6588235294" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="ejR-Tk-Scd" firstAttribute="leading" secondItem="8dr-jz-cYN" secondAttribute="leading" constant="20" id="DWx-3b-rpG"/>
-                        <constraint firstAttribute="width" secondItem="8dr-jz-cYN" secondAttribute="height" multiplier="15:2" id="EBj-KC-Ppi"/>
-                        <constraint firstAttribute="bottom" secondItem="ejR-Tk-Scd" secondAttribute="bottom" constant="8" id="Np4-vP-Fty"/>
-                        <constraint firstItem="ejR-Tk-Scd" firstAttribute="top" secondItem="8dr-jz-cYN" secondAttribute="top" constant="8" id="dcJ-pz-vpI"/>
-                        <constraint firstAttribute="trailing" secondItem="ejR-Tk-Scd" secondAttribute="trailing" constant="13" id="m1s-aQ-1tq"/>
+                        <constraint firstAttribute="bottom" secondItem="TvD-1R-WN6" secondAttribute="bottom" constant="8" id="7zL-xx-IYI"/>
+                        <constraint firstAttribute="width" secondItem="8Mp-Ae-0kf" secondAttribute="height" multiplier="15:2" id="Asj-pi-g32"/>
+                        <constraint firstItem="TvD-1R-WN6" firstAttribute="leading" secondItem="8Mp-Ae-0kf" secondAttribute="leading" constant="20" id="Qtu-zW-TB6"/>
+                        <constraint firstAttribute="trailing" secondItem="TvD-1R-WN6" secondAttribute="trailing" constant="13" id="V9E-f5-DPV"/>
+                        <constraint firstItem="TvD-1R-WN6" firstAttribute="top" secondItem="8Mp-Ae-0kf" secondAttribute="top" constant="8" id="zPY-GA-BiJ"/>
                     </constraints>
                 </view>
-                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SO0-bv-qsz">
+                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vnq-fR-Gny">
                     <rect key="frame" x="0.0" y="120" width="300" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="Dbc-Dr-Zgy"/>
+                        <constraint firstAttribute="height" constant="40" id="v2K-Fs-TT7"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="15"/>
-                    <state key="normal" title="去登陆">
+                    <state key="normal" title="台式烤箱">
                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="isGoingToLogin:" destination="gGd-wB-mqb" eventType="touchUpInside" id="EFU-Mz-U2L"/>
+                        <action selector="ovenTypeTapped:" destination="wX0-kE-Q3r" eventType="touchUpInside" id="wNM-0G-v6W"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登陆后绑定烤箱可赢取500积分哦！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fR-mM-QoJ">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择您使用的烤箱类型" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yA2-Vp-myt">
                     <rect key="frame" x="0.0" y="40" width="300" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="c9N-Fg-Dp8"/>
+                        <constraint firstAttribute="height" constant="40" id="Y2R-QZ-S38"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="15"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJy-qX-LSS">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wak-MN-atv">
                     <rect key="frame" x="0.0" y="80" width="300" height="40"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="Udo-Sa-Ijy"/>
+                        <constraint firstAttribute="height" constant="40" id="vFW-WE-wfH"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="15"/>
-                    <state key="normal" title="直接添加烤箱">
+                    <state key="normal" title="嵌入式烤箱">
                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="isGoingToLogin:" destination="gGd-wB-mqb" eventType="touchUpInside" id="aLa-0q-tmk"/>
+                        <action selector="ovenTypeTapped:" destination="wX0-kE-Q3r" eventType="touchUpInside" id="4mz-z1-ndi"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="8dr-jz-cYN" firstAttribute="leading" secondItem="gGd-wB-mqb" secondAttribute="leading" id="1Go-Bz-Id9"/>
-                <constraint firstItem="8dr-jz-cYN" firstAttribute="top" secondItem="gGd-wB-mqb" secondAttribute="top" id="3qj-to-kd2"/>
-                <constraint firstAttribute="trailing" secondItem="9fR-mM-QoJ" secondAttribute="trailing" id="BS3-bS-DiK"/>
-                <constraint firstItem="9fR-mM-QoJ" firstAttribute="top" secondItem="8dr-jz-cYN" secondAttribute="bottom" id="Ggd-SJ-YYU"/>
-                <constraint firstItem="HJy-qX-LSS" firstAttribute="top" secondItem="9fR-mM-QoJ" secondAttribute="bottom" id="M6R-ZO-rfp"/>
-                <constraint firstAttribute="trailing" secondItem="HJy-qX-LSS" secondAttribute="trailing" id="Nk8-Ud-MCY"/>
-                <constraint firstItem="SO0-bv-qsz" firstAttribute="top" secondItem="HJy-qX-LSS" secondAttribute="bottom" id="P2J-YA-UX1"/>
-                <constraint firstAttribute="trailing" secondItem="8dr-jz-cYN" secondAttribute="trailing" id="Rns-d9-f2o"/>
-                <constraint firstAttribute="trailing" secondItem="SO0-bv-qsz" secondAttribute="trailing" id="ZdX-5C-PDc"/>
-                <constraint firstItem="HJy-qX-LSS" firstAttribute="leading" secondItem="gGd-wB-mqb" secondAttribute="leading" id="eoP-7w-NEk"/>
-                <constraint firstItem="9fR-mM-QoJ" firstAttribute="leading" secondItem="gGd-wB-mqb" secondAttribute="leading" id="uhO-c4-vfG"/>
-                <constraint firstItem="SO0-bv-qsz" firstAttribute="leading" secondItem="gGd-wB-mqb" secondAttribute="leading" id="yNC-NW-PRz"/>
+                <constraint firstItem="8Mp-Ae-0kf" firstAttribute="top" secondItem="wX0-kE-Q3r" secondAttribute="top" id="2M0-fi-etb"/>
+                <constraint firstItem="yA2-Vp-myt" firstAttribute="leading" secondItem="wX0-kE-Q3r" secondAttribute="leading" id="4am-Jg-qmt"/>
+                <constraint firstAttribute="trailing" secondItem="Wak-MN-atv" secondAttribute="trailing" id="6ap-rG-hCr"/>
+                <constraint firstAttribute="trailing" secondItem="Vnq-fR-Gny" secondAttribute="trailing" id="Hgx-8k-ZZ3"/>
+                <constraint firstItem="Wak-MN-atv" firstAttribute="leading" secondItem="wX0-kE-Q3r" secondAttribute="leading" id="Le0-yY-4Xy"/>
+                <constraint firstItem="Wak-MN-atv" firstAttribute="top" secondItem="yA2-Vp-myt" secondAttribute="bottom" id="LtA-qj-XYD"/>
+                <constraint firstItem="Vnq-fR-Gny" firstAttribute="top" secondItem="Wak-MN-atv" secondAttribute="bottom" id="NcP-vE-my5"/>
+                <constraint firstItem="Vnq-fR-Gny" firstAttribute="leading" secondItem="wX0-kE-Q3r" secondAttribute="leading" id="Wf8-OP-25S"/>
+                <constraint firstItem="8Mp-Ae-0kf" firstAttribute="leading" secondItem="wX0-kE-Q3r" secondAttribute="leading" id="dgL-9x-fq3"/>
+                <constraint firstAttribute="trailing" secondItem="8Mp-Ae-0kf" secondAttribute="trailing" id="nrh-oV-G1n"/>
+                <constraint firstItem="yA2-Vp-myt" firstAttribute="top" secondItem="8Mp-Ae-0kf" secondAttribute="bottom" id="q7o-Xv-XHP"/>
+                <constraint firstAttribute="trailing" secondItem="yA2-Vp-myt" secondAttribute="trailing" id="xQW-xz-TfU"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
