--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2Vb-MN-7O4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2Vb-MN-7O4">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
@@ -12,7 +12,6 @@
             <string>FZLTCHJW--GB1-0</string>
         </mutableArray>
         <mutableArray key="FZLTHJW.ttf">
-            <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
@@ -357,6 +356,7 @@
                     <connections>
                         <outlet property="loginBtn" destination="KPP-US-iGa" id="ucu-nb-lrU"/>
                         <outlet property="psdTextfailed" destination="dTr-bX-pTf" id="FEz-DR-kzk"/>
+                        <outlet property="qqLoginButton" destination="Uuf-0V-4Jc" id="GdG-WI-lF7"/>
                         <outlet property="userNameTextFailed" destination="rND-iP-xgU" id="Vcy-T6-QPd"/>
                         <outletCollection property="textborder" destination="TX4-fR-efw" id="73A-U2-j1Z"/>
                         <outletCollection property="textborder" destination="dbl-az-t2k" id="Epe-c9-EYp"/>
@@ -822,7 +822,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="R9J-ka-ZKw">
-                            <rect key="frame" x="130" y="5.5" width="60" height="33"/>
+                            <rect key="frame" x="130" y="6" width="60" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="烘焙屋" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibQ-RK-4tV">
@@ -2686,7 +2686,7 @@
                                 <rect key="frame" x="16" y="78" width="288" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="38" id="bbo-L3-qQs"/>
+                                    <constraint firstAttribute="height" constant="38" id="IsF-5s-dAx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
                                 <state key="normal" title="关于海尔烤箱APP">
@@ -2701,6 +2701,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QYh-6l-v83">
                                 <rect key="frame" x="16" y="132" width="288" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="ZT3-2e-ikw"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
                                 <state key="normal" title="反馈意见">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -2711,21 +2714,12 @@
                                     <segue destination="S9g-Sk-xIZ" kind="push" id="H9E-he-eDj"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XWO-Hw-T19">
-                                <rect key="frame" x="16" y="188" width="288" height="38"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
-                                <state key="normal" title="版本号1.0">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="VersionChick:" destination="N9h-E8-60f" eventType="touchUpInside" id="KVt-07-258"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4dZ-AN-SO8">
-                                <rect key="frame" x="16" y="242" width="288" height="38"/>
+                                <rect key="frame" x="16" y="187" width="288" height="38"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="8LK-Bd-uXg"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
                                 <state key="normal" title="我要去给APP评分">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -2736,8 +2730,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8g9-Pe-tUi">
-                                <rect key="frame" x="16" y="296" width="288" height="38"/>
+                                <rect key="frame" x="16" y="242" width="288" height="38"/>
                                 <color key="backgroundColor" red="1" green="0.66162247910000005" blue="0.22306243340000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="etz-sH-I8A"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="15"/>
                                 <state key="normal" title="退出登录">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2750,26 +2747,18 @@
                         </subviews>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Aek-DR-Zmc" secondAttribute="trailing" constant="16" id="1Jb-Bj-l2F"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="leading" secondItem="8g9-Pe-tUi" secondAttribute="leading" id="84W-WU-bMB"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="width" secondItem="8g9-Pe-tUi" secondAttribute="width" id="CVS-Xz-oLI"/>
-                            <constraint firstItem="Aek-DR-Zmc" firstAttribute="top" secondItem="3L2-ic-4Fg" secondAttribute="bottom" constant="14" id="Fjd-oF-iJX"/>
-                            <constraint firstItem="Aek-DR-Zmc" firstAttribute="top" secondItem="3L2-ic-4Fg" secondAttribute="bottom" constant="14" id="Gs2-3H-ZZ0"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="width" secondItem="Aek-DR-Zmc" secondAttribute="width" id="HpS-FD-Et0"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="height" secondItem="8g9-Pe-tUi" secondAttribute="height" id="Jja-Pe-vFO"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="leading" secondItem="XWO-Hw-T19" secondAttribute="leading" id="LAG-Tx-pmQ"/>
-                            <constraint firstItem="XWO-Hw-T19" firstAttribute="top" secondItem="QYh-6l-v83" secondAttribute="bottom" constant="18" id="Nny-Nj-u7H"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="top" secondItem="Aek-DR-Zmc" secondAttribute="bottom" constant="16" id="QEw-KG-xIG"/>
-                            <constraint firstItem="8g9-Pe-tUi" firstAttribute="top" secondItem="4dZ-AN-SO8" secondAttribute="bottom" constant="16" id="QOl-GT-wtD"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="top" secondItem="XWO-Hw-T19" secondAttribute="bottom" constant="16" id="Ufs-lP-XsO"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="leading" secondItem="Aek-DR-Zmc" secondAttribute="leading" id="VPR-2p-icT"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="height" secondItem="Aek-DR-Zmc" secondAttribute="height" id="clb-18-doM"/>
-                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="leading" secondItem="QYh-6l-v83" secondAttribute="leading" id="ffk-8E-6Vk"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="height" secondItem="4dZ-AN-SO8" secondAttribute="height" id="iP4-ti-uA2"/>
-                            <constraint firstItem="Aek-DR-Zmc" firstAttribute="leading" secondItem="WKi-H6-Jk9" secondAttribute="leading" constant="16" id="mPL-OK-x9E"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="width" secondItem="4dZ-AN-SO8" secondAttribute="width" id="qcb-bn-Imb"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="width" secondItem="XWO-Hw-T19" secondAttribute="width" id="rlz-ic-Bo2"/>
-                            <constraint firstItem="QYh-6l-v83" firstAttribute="height" secondItem="XWO-Hw-T19" secondAttribute="height" id="xCH-jz-fjg"/>
+                            <constraint firstAttribute="trailing" secondItem="4dZ-AN-SO8" secondAttribute="trailing" constant="16" id="0GJ-kZ-5C4"/>
+                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="leading" secondItem="WKi-H6-Jk9" secondAttribute="leading" constant="16" id="Acm-nq-gBg"/>
+                            <constraint firstAttribute="trailing" secondItem="8g9-Pe-tUi" secondAttribute="trailing" constant="16" id="Ahk-fC-ZAR"/>
+                            <constraint firstAttribute="trailing" secondItem="QYh-6l-v83" secondAttribute="trailing" constant="16" id="LVH-Uo-Rgk"/>
+                            <constraint firstItem="4dZ-AN-SO8" firstAttribute="top" secondItem="QYh-6l-v83" secondAttribute="bottom" constant="17" id="LZ5-zb-eHB"/>
+                            <constraint firstItem="Aek-DR-Zmc" firstAttribute="leading" secondItem="WKi-H6-Jk9" secondAttribute="leading" constant="16" id="P0M-3I-lwF"/>
+                            <constraint firstItem="Aek-DR-Zmc" firstAttribute="top" secondItem="3L2-ic-4Fg" secondAttribute="bottom" constant="14" id="VB0-mT-oae"/>
+                            <constraint firstItem="8g9-Pe-tUi" firstAttribute="leading" secondItem="WKi-H6-Jk9" secondAttribute="leading" constant="16" id="VHk-db-voX"/>
+                            <constraint firstAttribute="trailing" secondItem="Aek-DR-Zmc" secondAttribute="trailing" constant="16" id="j5F-bl-g2M"/>
+                            <constraint firstItem="QYh-6l-v83" firstAttribute="leading" secondItem="WKi-H6-Jk9" secondAttribute="leading" constant="16" id="meF-I4-OY5"/>
+                            <constraint firstItem="8g9-Pe-tUi" firstAttribute="top" secondItem="4dZ-AN-SO8" secondAttribute="bottom" constant="17" id="tKG-vJ-IP1"/>
+                            <constraint firstItem="QYh-6l-v83" firstAttribute="top" secondItem="Aek-DR-Zmc" secondAttribute="bottom" constant="16" id="wm5-2R-JoZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="M6s-N0-EN5">
@@ -2787,7 +2776,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="RMU-wm-B1g">
-                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
+                            <rect key="frame" x="96" y="6" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设置" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbL-ux-EAS">
@@ -2806,7 +2795,6 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="logoutButton" destination="8g9-Pe-tUi" id="1Tl-nQ-rlN"/>
-                        <outlet property="versionButton" destination="XWO-Hw-T19" id="TRF-1C-sZE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MCb-SY-i9B" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3009,7 +2997,7 @@
                     <navigationItem key="navigationItem" id="pmg-s3-JMG">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="gmz-QB-MH0">
-                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
+                            <rect key="frame" x="96" y="6" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="反馈意见" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tR1-TW-yXb">
